--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.1.0",
-    "react-navigation": "^3.9.1"
+    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/native": "5.9.2",
+    "@react-navigation/stack": "5.14.2",
+    "expo": "^40.0.1",
+    "fs": "^0.0.1-security",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-elements": "~3.1.0",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-xml2js": "^1.0.3",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@react-native-community/async-storage": "^1.12.1",
+    "babel-preset-expo": "~8.3.0",
+    "react-native-vector-icons": "^8.0.0"
   },
   "private": true
 }
