--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "5.9.2",
     "@react-navigation/stack": "5.14.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "expo": "^40.0.1",
     "fs": "^0.0.1-security",
     "react": "16.13.1",
@@ -23,12 +24,15 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-xml2js": "^1.0.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "babel-preset-expo": "~8.3.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.0.0",
+    "redux-devtools": "^3.7.0"
   },
   "private": true
 }
