--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/native": "5.9.2",
     "@react-navigation/stack": "5.14.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "browserfs": "^1.4.3",
     "expo": "^40.0.1",
-    "fs": "^0.0.1-security",
+    "local-storage": "^2.0.0",
     "react": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
     "react-native-elements": "~3.1.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-navigation/routers": "^5.7.2",
     "babel-preset-expo": "~8.3.0",
     "react-native-vector-icons": "^8.0.0",
     "redux-devtools": "^3.7.0"
