--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/routers": "^5.7.2",
     "babel-preset-expo": "~8.3.0",
+    "react-native-render-html": "^5.1.0",
     "react-native-vector-icons": "^8.0.0",
     "redux-devtools": "^3.7.0"
   },
